...
          ),
        }}
      />
      <Tabs.Screen
        name="consequences"
        options={{
          title: 'Rules',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="shield-outline" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
